--- a/.gitignore
+++ b/.gitignore
@@ -118,7 +118,7 @@ target/
 # IPython
 profile_default/
 ipython_config.py
-scratch.py
+scratchpad/*
 
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
